--- a/reservation.html
+++ b/reservation.html
@@ -40,6 +40,7 @@
         Souhaits particuliers : <br><br>
         <textarea name="" id="" cols="50" rows="5"></textarea><br><br>
         <input type="submit" value="valider" style="width: 200px;;">
+         <input type="submit" value="envoyer" style="width: 200px;;">
 
 </body>
 </html>
